tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0260/input.js
function x(...a = 1){}
